--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="card ui-g">
   <div class="ui-g-12 ui-fluid">
+    <p-messages></p-messages>
     <compose-email></compose-email>
   </div>
 </div>
