--- a/src/app/components/compose-email/compose-email.component.html
+++ b/src/app/components/compose-email/compose-email.component.html
@@ -1,39 +1,36 @@
 <p-panel header="Compose mail">
-  <form [formGroup]="emailForm" (ngSubmit)="onSubmit()" class="ui-g">
-    <div class="ui-g-12">
-      <div class="ui-inputgroup">
-        <span class="ui-inputgroup-addon">From:</span>
-        <input type="text" pInputText value="{{emailForm.get('from').value.name}} ({{emailForm.get('from').value.email}})" disabled>
-      </div>
-    </div>
-    <div class="ui-g-12">
-      <address-field [form]="emailForm" label="To" [formName]="'to'" (focus)="displayBCC && hideBcc()"></address-field>
-    </div>
+    <form [formGroup]="emailForm" (ngSubmit)="onSubmit()" class="ui-g">
+        <div class="ui-g-12">
+            <div class="ui-inputgroup">
+                <span class="ui-inputgroup-addon">From:</span>
+                <input type="text" pInputText value="{{emailForm.get('from').value.name}} ({{emailForm.get('from').value.email}})" disabled>
+            </div>
+        </div>
+        <div class="ui-g-12">
+            <address-field [form]="emailForm" label="To" [formName]="'to'" (focus)="displayBCC && hideBcc()"></address-field>
+        </div>
 
-    <div class="ui-g-12">
-      <address-field [form]="emailForm" [label]="displayBCC ? 'Cc': 'Cc/Bcc'" [formName]="'cc'"
-                     (focus)="!displayBCC && (displayBCC = true)"></address-field>
-    </div>
-    <div *ngIf="displayBCC" class="ui-g-12">
-      <address-field [form]="emailForm" label="Bcc" [formName]="'bcc'"></address-field>
-    </div>
+        <div class="ui-g-12">
+            <address-field [form]="emailForm" [label]="displayBCC ? 'Cc': 'Cc/Bcc'" [formName]="'cc'" (focus)="!displayBCC && (displayBCC = true)"></address-field>
+        </div>
+        <div *ngIf="displayBCC" class="ui-g-12">
+            <address-field [form]="emailForm" label="Bcc" [formName]="'bcc'"></address-field>
+        </div>
 
-    <div class="ui-g-12" style="padding-top: 30px">
-      <input type="text" pInputText placeholder="Subject" formControlName="subject" (focus)="displayBCC && hideBcc()">
-    </div>
-    <div class="ui-g-12">
-      <textarea [rows]="10" pInputTextarea autoResize="autoResize" formControlName="text" (focus)="displayBCC && hideBcc()"></textarea>
-    </div>
-    <div class="ui-g-12">
-      <div class="button-group">
-        <button pButton type="submit" label="Send" icon="ui-icon-send"
-                [disabled]="!emailForm.valid || sending"></button>
-      </div>
-      <div class="button-group">
-        <button pButton type="button" label="Discard" icon="ui-icon-delete"
-                (click)="createForm()" class="blue-grey-btn"></button>
-      </div>
-    </div>
-  </form>
+        <div class="ui-g-12" style="padding-top: 30px">
+            <input type="text" pInputText placeholder="Subject" formControlName="subject" (focus)="displayBCC && hideBcc()">
+        </div>
+        <div class="ui-g-12">
+            <textarea [rows]="10" pInputTextarea autoResize="autoResize" formControlName="text" (focus)="displayBCC && hideBcc()"></textarea>
+        </div>
+        <div class="ui-g-12">
+            <div class="button-group">
+                <button pButton type="submit" label="Send" icon="ui-icon-send" [disabled]="!emailForm.valid || sending"></button>
+            </div>
+            <div class="button-group">
+                <button pButton type="button" label="Discard" icon="ui-icon-delete" (click)="createForm()" class="blue-grey-btn"></button>
+            </div>
+        </div>
+    </form>
 </p-panel>
 <ngx-loading [show]="sending"></ngx-loading>
