backend: switch agent when one failed

--- a/src/app/components/compose-email/compose-email.component.html
+++ b/src/app/components/compose-email/compose-email.component.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="ui-g-12">
-            <address-field [form]="emailForm" [label]="ifDisplayBCC ? 'Cc': 'Cc/Bcc'" [formName]="'cc'" (focus)="!ifDisplayBCC && (ififDisplayBCC = true)"></address-field>
+            <address-field [form]="emailForm" [label]="ifDisplayBCC ? 'Cc': 'Cc/Bcc'" [formName]="'cc'" (focus)="!ifDisplayBCC && (ifDisplayBCC = true)"></address-field>
         </div>
         <div *ngIf="ifDisplayBCC" class="ui-g-12">
             <address-field [form]="emailForm" label="Bcc" [formName]="'bcc'"></address-field>
