--- a/src/app/components/compose-email/compose-email.component.html
+++ b/src/app/components/compose-email/compose-email.component.html
@@ -1,5 +1,5 @@
 <p-panel header="Compose mail">
-    <form [formGroup]="emailForm" (ngSubmit)="onSubmit()" class="ui-g">
+    <form [formGroup]="emailForm" class="ui-g">
         <div class="ui-g-12">
             <div class="ui-inputgroup">
                 <span class="ui-inputgroup-addon">From:</span>
@@ -25,7 +25,7 @@
         </div>
         <div class="ui-g-12">
             <div class="button-group">
-                <button pButton type="submit" label="Send" icon="ui-icon-send" [disabled]="!emailForm.valid || isSending"></button>
+                <button pButton type="button" label="Send" icon="ui-icon-send" (click)="submitForm()" [disabled]="!emailForm.valid || isSending"></button>
             </div>
             <div class="button-group">
                 <button pButton type="button" label="Discard" icon="ui-icon-delete" (click)="createForm()" class="blue-grey-btn"></button>
