--- a/src/app/components/address-field/address-field.component.html
+++ b/src/app/components/address-field/address-field.component.html
@@ -1,7 +1,7 @@
 <div class="ui-inputgroup" [formGroup]="form">
     <span class="ui-inputgroup-addon">{{label}}:</span>
     <tag-input [formControlName]="formName" secondaryPlaceholder='' placeholder (onFocus)="focus.emit(formName)" [onAdding]="onAdding.bind(this)"
-        [errorMessages]="errorMsg" (onTextChange)="errorMsg = null" [displayBy]="'name'" [identifyBy]="'email'">
+        [addOnBlur]="true" [errorMessages]="errorMsg" (onTextChange)="errorMsg = null" [displayBy]="'name'" [identifyBy]="'email'">
         <tag-input-dropdown [autocompleteObservable]='matchedContacts' [matchingFn]="matchingfn" [displayBy]="'name'" [identifyBy]="'email'">
             <ng-template let-item="item" let-index="index">
                 <strong>{{ item.name }}</strong> {{ item.email }}
